# replit_info

./: .coverage  .replit  README.md  main.py  pyproject.toml  replit.nix  requirements.txt  setup.py
attached_assets/: Pasted--home-runner-workspace-main-py-home-runner-workspace-main-py-55-14-error-Cannot-assign-to-attr-1736146482794.txt  Pasted--scripts-prepare-environment-py-17-5-E125-continuation-line-with-same-indent-as-next-logical-line--1735892352410.txt  Pasted--workflows-workflow--1735892602532.txt
scripts/: create_zip.py  install_toml.py  prepare_environment.py  pypi_upload.py
src/: simple_crypto.py
templates/: index.html
