[build-system]
  build-backend = "setuptools.build_meta"
  requires = ["setuptools>=45", "wheel"]

[project]
  classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Python Modules",
  ]
  description = ""
  name = "GitPyPi312"
  readme = "README.md"
  requires-python = ">=3.11"
  version = "0.1.1"

[[project.authors]]
  email = "joaoslopes@gmail.com"
  name = "Joao Lopes"

[project.license]
  file = "LICENSE"

[project.urls]
  Homepage = "https://github.com/"
  Repository = "https://github.com/kairos-xx/GitPyPi312.git"

[tool.flake8]
  ignore = ["E203", "E701", "W503"]
  max-line-length = 79

[tool.ruff.lint]
  ignore = ["W291", "W292", "W293", "E203", "E701"]
  select = ["E", "W", "F", "I", "B", "C4", "ARG", "SIM"]
