[build-system]
requires = [ "setuptools>=45", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "replit_info"
version = "0.1.1"
description = "A simple API to fetch information about Replit repls using GraphQL."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [ "Development Status :: 5 - Production/Stable", "Intended Audience :: Developers", "Intended Audience :: Science/Research", "License :: OSI Approved :: MIT License", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.11", "Operating System :: OS Independent", "Natural Language :: English", "Typing :: Typed", "Topic :: Software Development :: Libraries :: Python Modules", "Topic :: Software Development :: Libraries :: Python Modules", "Topic :: Software Development :: Libraries :: Python Modules",]
[[project.authors]]
name = "Joao Lopes"
email = "joaoslopes@gmail.com"

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/kairos-xx/replit_info.git"
Repository = "https://github.com/kairos-xx/replit_info.git"

[tool.flake8]
max-line-length = 79
ignore = [ "E203", "E701", "W503",]

[tool.ruff.lint]
select = [ "E", "W", "F", "I", "B", "C4", "ARG", "SIM",]
ignore = [ "W291", "W292", "W293", "E203", "E701",]
